updated project section

--- a/index.html
+++ b/index.html
@@ -674,6 +674,166 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Project 5 - EcoScan -->
+            <div class="project-card" style="width: 340px; background: rgba(255, 255, 255, 0.05); border-radius: 16px; overflow: hidden; transition: transform 0.3s ease;">
+                <div class="project-img" style="width: 100%; height: 180px; overflow: hidden;">
+                    <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=400&q=80" alt="EcoScan" style="width: 100%; height: 100%; object-fit: cover;">
+                </div>
+                <div class="project-info" style="padding: 2rem;">
+                    <h4 style="font-size: 2rem; color: var(--white-color); margin-bottom: 1rem;">EcoScan</h4>
+                    <p style="font-size: 1.4rem; color: var(--white-color); margin-bottom: 1.5rem;">
+                        Mobile app for scanning and tracking environmental impact, recycling, and sustainability actions.
+                    </p>
+                    <div class="project-tech" style="margin-bottom: 1.5rem;">
+                        <span style="display: inline-block; background: rgba(255, 255, 255, 0.1); color: var(--white-color); padding: 0.5rem 1rem; border-radius: 2rem; font-size: 1.2rem; margin-right: 0.5rem; margin-bottom: 0.5rem;">
+                            Mobile
+                        </span>
+                        <span style="display: inline-block; background: rgba(255, 255, 255, 0.1); color: var(--white-color); padding: 0.5rem 1rem; border-radius: 2rem; font-size: 1.2rem; margin-right: 0.5rem; margin-bottom: 0.5rem;">
+                            Flutter
+                        </span>
+                        <span style="display: inline-block; background: rgba(255, 255, 255, 0.1); color: var(--white-color); padding: 0.5rem 1rem; border-radius: 2rem; font-size: 1.2rem; margin-right: 0.5rem; margin-bottom: 0.5rem;">
+                            Environment
+                        </span>
+                    </div>
+                    <div style="display: flex; gap: 1rem;">
+                        <a href="#" class="btn" style="flex: 1; text-align: center; padding: 0.8rem; background: var(--main-color); color: var(--bg-color); border-radius: 0.5rem; font-size: 1.4rem; font-weight: 500;">
+                            Live Demo
+                        </a>
+                        <a href="#" class="btn" style="flex: 1; text-align: center; padding: 0.8rem; background: rgba(255, 255, 255, 0.1); color: var(--white-color); border-radius: 0.5rem; font-size: 1.4rem; font-weight: 500;">
+                            GitHub
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project 6 - Smart Health Tracker -->
+            <div class="project-card" style="width: 340px; background: rgba(255, 255, 255, 0.05); border-radius: 16px; overflow: hidden; transition: transform 0.3s ease;">
+                <div class="project-img" style="width: 100%; height: 180px; overflow: hidden;">
+                    <img src="./assets/images/health.jpg" alt="Smart Health Tracker" style="width: 100%; height: 100%; object-fit: cover;">
+                </div>
+                <div class="project-info" style="padding: 2rem;">
+                    <h4 style="font-size: 2rem; color: var(--white-color); margin-bottom: 1rem;">Smart Health Tracker</h4>
+                    <p style="font-size: 1.4rem; color: var(--white-color); margin-bottom: 1.5rem;">
+                        Wearable health monitoring solution for tracking vitals, activity, and providing health insights.
+                    </p>
+                    <div class="project-tech" style="margin-bottom: 1.5rem;">
+                        <span style="display: inline-block; background: rgba(255, 255, 255, 0.1); color: var(--white-color); padding: 0.5rem 1rem; border-radius: 2rem; font-size: 1.2rem; margin-right: 0.5rem; margin-bottom: 0.5rem;">
+                            Wearable
+                        </span>
+                        <span style="display: inline-block; background: rgba(255, 255, 255, 0.1); color: var(--white-color); padding: 0.5rem 1rem; border-radius: 2rem; font-size: 1.2rem; margin-right: 0.5rem; margin-bottom: 0.5rem;">
+                            Health
+                        </span>
+                        <span style="display: inline-block; background: rgba(255, 255, 255, 0.1); color: var(--white-color); padding: 0.5rem 1rem; border-radius: 2rem; font-size: 1.2rem; margin-right: 0.5rem; margin-bottom: 0.5rem;">
+                            Analytics
+                        </span>
+                    </div>
+                    <div style="display: flex; gap: 1rem;">
+                        <a href="https://github.com/calvinkhoza/smartHealth-tracker" class="btn" style="flex: 1; text-align: center; padding: 0.8rem; background: var(--main-color); color: var(--bg-color); border-radius: 0.5rem; font-size: 1.4rem; font-weight: 500;">
+                            Live Demo
+                        </a>
+                        <a href="https://github.com/calvinkhoza/smartHealth-tracker" class="btn" style="flex: 1; text-align: center; padding: 0.8rem; background: rgba(255, 255, 255, 0.1); color: var(--white-color); border-radius: 0.5rem; font-size: 1.4rem; font-weight: 500;">
+                            GitHub
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project 7 - Healthcare Supply Chain -->
+            <div class="project-card" style="width: 340px; background: rgba(255, 255, 255, 0.05); border-radius: 16px; overflow: hidden; transition: transform 0.3s ease;">
+                <div class="project-img" style="width: 100%; height: 180px; overflow: hidden;">
+                    <img src="./assets/images/SUPPLY.PNG" alt="Healthcare Supply Chain" style="width: 100%; height: 100%; object-fit: cover;">
+                </div>
+                <div class="project-info" style="padding: 2rem;">
+                    <h4 style="font-size: 2rem; color: var(--white-color); margin-bottom: 1rem;">Healthcare Supply Chain</h4>
+                    <p style="font-size: 1.4rem; color: var(--white-color); margin-bottom: 1.5rem;">
+                        End-to-end supply chain management solution for healthcare providers, improving inventory and logistics.
+                    </p>
+                    <div class="project-tech" style="margin-bottom: 1.5rem;">
+                        <span style="display: inline-block; background: rgba(255, 255, 255, 0.1); color: var(--white-color); padding: 0.5rem 1rem; border-radius: 2rem; font-size: 1.2rem; margin-right: 0.5rem; margin-bottom: 0.5rem;">
+                            Node.js
+                        </span>
+                        <span style="display: inline-block; background: rgba(255, 255, 255, 0.1); color: var(--white-color); padding: 0.5rem 1rem; border-radius: 2rem; font-size: 1.2rem; margin-right: 0.5rem; margin-bottom: 0.5rem;">
+                            Express
+                        </span>
+                        <span style="display: inline-block; background: rgba(255, 255, 255, 0.1); color: var(--white-color); padding: 0.5rem 1rem; border-radius: 2rem; font-size: 1.2rem; margin-right: 0.5rem; margin-bottom: 0.5rem;">
+                            MongoDB
+                        </span>
+                    </div>
+                    <div style="display: flex; gap: 1rem;">
+                        <a href="https://github.com/calvinkhoza/Healthcare-Supply-Chain-Management-System" class="btn" style="flex: 1; text-align: center; padding: 0.8rem; background: var(--main-color); color: var(--bg-color); border-radius: 0.5rem; font-size: 1.4rem; font-weight: 500;">
+                            Live Demo
+                        </a>
+                        <a href="https://github.com/calvinkhoza/Healthcare-Supply-Chain-Management-System" class="btn" style="flex: 1; text-align: center; padding: 0.8rem; background: rgba(255, 255, 255, 0.1); color: var(--white-color); border-radius: 0.5rem; font-size: 1.4rem; font-weight: 500;">
+                            GitHub
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project 8 - AI Chatbot Solution -->
+            <div class="project-card" style="width: 340px; background: rgba(255, 255, 255, 0.05); border-radius: 16px; overflow: hidden; transition: transform 0.3s ease;">
+                <div class="project-img" style="width: 100%; height: 180px; overflow: hidden;">
+                    <img src="./assets/images/chatbot-icon-concept-chat-bot-chatterbot-robot-virtual-assistance-website_123447-1615.avif" alt="AI Chatbot" style="width: 100%; height: 100%; object-fit: cover;">
+                </div>
+                <div class="project-info" style="padding: 2rem;">
+                    <h4 style="font-size: 2rem; color: var(--white-color); margin-bottom: 1rem;">AI Chatbot Solution</h4>
+                    <p style="font-size: 1.4rem; color: var(--white-color); margin-bottom: 1.5rem;">
+                        Conversational AI chatbot for customer support, integrated with business APIs and analytics.
+                    </p>
+                    <div class="project-tech" style="margin-bottom: 1.5rem;">
+                        <span style="display: inline-block; background: rgba(255, 255, 255, 0.1); color: var(--white-color); padding: 0.5rem 1rem; border-radius: 2rem; font-size: 1.2rem; margin-right: 0.5rem; margin-bottom: 0.5rem;">
+                            AI
+                        </span>
+                        <span style="display: inline-block; background: rgba(255, 255, 255, 0.1); color: var(--white-color); padding: 0.5rem 1rem; border-radius: 2rem; font-size: 1.2rem; margin-right: 0.5rem; margin-bottom: 0.5rem;">
+                            Chatbot
+                        </span>
+                        <span style="display: inline-block; background: rgba(255, 255, 255, 0.1); color: var(--white-color); padding: 0.5rem 1rem; border-radius: 2rem; font-size: 1.2rem; margin-right: 0.5rem; margin-bottom: 0.5rem;">
+                            APIs
+                        </span>
+                    </div>
+                    <div style="display: flex; gap: 1rem;">
+                        <a href="#" class="btn" style="flex: 1; text-align: center; padding: 0.8rem; background: var(--main-color); color: var(--bg-color); border-radius: 0.5rem; font-size: 1.4rem; font-weight: 500;">
+                            Live Demo
+                        </a>
+                        <a href="#" class="btn" style="flex: 1; text-align: center; padding: 0.8rem; background: rgba(255, 255, 255, 0.1); color: var(--white-color); border-radius: 0.5rem; font-size: 1.4rem; font-weight: 500;">
+                            GitHub
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project 9 - Cloud Automation Platform -->
+            <div class="project-card" style="width: 340px; background: rgba(255, 255, 255, 0.05); border-radius: 16px; overflow: hidden; transition: transform 0.3s ease;">
+                <div class="project-img" style="width: 100%; height: 180px; overflow: hidden;">
+                    <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=400&q=80" alt="Cloud Automation" style="width: 100%; height: 100%; object-fit: cover;">
+                </div>
+                <div class="project-info" style="padding: 2rem;">
+                    <h4 style="font-size: 2rem; color: var(--white-color); margin-bottom: 1rem;">Cloud Automation Platform</h4>
+                    <p style="font-size: 1.4rem; color: var(--white-color); margin-bottom: 1.5rem;">
+                        Automated deployment and scaling of cloud infrastructure using Terraform and Ansible for a fintech startup.
+                    </p>
+                    <div class="project-tech" style="margin-bottom: 1.5rem;">
+                        <span style="display: inline-block; background: rgba(255, 255, 255, 0.1); color: var(--white-color); padding: 0.5rem 1rem; border-radius: 2rem; font-size: 1.2rem; margin-right: 0.5rem; margin-bottom: 0.5rem;">
+                            Terraform
+                        </span>
+                        <span style="display: inline-block; background: rgba(255, 255, 255, 0.1); color: var(--white-color); padding: 0.5rem 1rem; border-radius: 2rem; font-size: 1.2rem; margin-right: 0.5rem; margin-bottom: 0.5rem;">
+                            Ansible
+                        </span>
+                        <span style="display: inline-block; background: rgba(255, 255, 255, 0.1); color: var(--white-color); padding: 0.5rem 1rem; border-radius: 2rem; font-size: 1.2rem; margin-right: 0.5rem; margin-bottom: 0.5rem;">
+                            AWS
+                        </span>
+                    </div>
+                    <div style="display: flex; gap: 1rem;">
+                        <a href="https://github.com/calvinkhoza/CI-CD-pipeline" class="btn" style="flex: 1; text-align: center; padding: 0.8rem; background: var(--main-color); color: var(--bg-color); border-radius: 0.5rem; font-size: 1.4rem; font-weight: 500;">
+                            Live Demo
+                        </a>
+                        <a href="https://github.com/calvinkhoza/CI-CD-pipeline" class="btn" style="flex: 1; text-align: center; padding: 0.8rem; background: rgba(255, 255, 255, 0.1); color: var(--white-color); border-radius: 0.5rem; font-size: 1.4rem; font-weight: 500;">
+                            GitHub
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
