feat: added functionality to download button

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </h2>
             <p>Welcome to my personal profile. I'm a passionate DevOps Engineer with expertise in building scalable, reliable, and efficient infrastructure. My focus is on implementing CI/CD pipelines, infrastructure as code, and cloud-native solutions to accelerate software delivery while maintaining high standards of quality and security.</p>
             <div class="btn-sci">
-                <a href="#" class="btn">Download CV</a>
+                <a href="assets/CAVIN_CV.pdf" download class="btn btn-primary" class="btn">Download CV</a>
                 <div class="sci">
                     <a href="https://github.com/calvinkhoza"><i class="bx bxl-github"></i></a>
                     <a href="https://www.linkedin.com/in/calvin-khoza-csk1998/"><i class="bx bxl-linkedin"></i></a>
@@ -532,7 +532,7 @@
         
         <!-- Download CV Button -->
         <div style="text-align: center; margin-top: 4rem;">
-            <a href="#" class="btn" style="display: inline-block; padding: 1rem 3rem; background: var(--main-color); border: 0.2rem solid var(--main-color); border-radius: 4rem; font-size: 1.6rem; color: var(--bg-color); font-weight: 500; transition: 0.5s;">
+            <a href="assets/CAVIN_CV.pdf" download class="btn btn-primary" style="display: inline-block; padding: 1rem 3rem; background: var(--main-color); border: 0.2rem solid var(--main-color); border-radius: 4rem; font-size: 1.6rem; color: var(--bg-color); font-weight: 500; transition: 0.5s;">
                 Download CV
             </a>
         </div>
