--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
             </h2>
             <p>Welcome to my personal profile. I'm a passionate DevOps Engineer with expertise in building scalable, reliable, and efficient infrastructure. My focus is on implementing CI/CD pipelines, infrastructure as code, and cloud-native solutions to accelerate software delivery while maintaining high standards of quality and security.</p>
             <div class="btn-sci">
-                <a href="assets/CAVIN_CV.pdf" download class="btn btn-primary" class="btn">Download CV</a>
+                <a href="assets/CAVIN_CV.pdf" download class="btn btn-primary">Download CV</a>
                 <div class="sci">
                     <a href="https://github.com/calvinkhoza"><i class="bx bxl-github"></i></a>
                     <a href="https://www.linkedin.com/in/calvin-khoza-csk1998/"><i class="bx bxl-linkedin"></i></a>
-                    <a href="https://www.facebook.com/in/calvin-khoza-csk1998/"><i class="bx bxl-facebook"></i></a>
+                    <a href="https://www.facebook.com/calvin-khoza-csk1998/"><i class="bx bxl-facebook"></i></a>
                 </div>
             </div>
         </div>
@@ -953,32 +953,52 @@
     <!-- Contact Section -->
     <section class="contact" id="contact" style="padding: 10rem 9% 2rem; background: var(--second-bg-color);">
       <div class="container section-title" style="text-align: center; margin-bottom: 4rem;">
-        <h2 style="font-size: 4rem; font-weight: 700; color: var(--white-color); margin-bottom: 1.5rem;">Contact Me</h2>
-        <p style="font-size: 1.6rem; color: var(--white-color); max-width: 800px; margin: 0 auto; line-height: 1.6;">
-          Interested in working together or have a question? Feel free to reach out!
-        </p>
+        <h2 style="font-size: 4rem; font-weight: 700; color: var(--white-color); margin-bottom: 1.5rem;">Contact</h2>
+        <p style="font-size: 1.6rem; color: var(--white-color); max-width: 800px; margin: 0 auto; line-height: 1.6;">Contact me on the details below</p>
       </div>
-      <div class="contact-container" style="display: flex; flex-wrap: wrap; gap: 3rem; justify-content: center; align-items: flex-start;">
+      <div class="contact-flex" style="display: flex; flex-wrap: wrap; gap: 3rem; justify-content: center; align-items: flex-start;">
         <!-- Contact Details -->
         <div class="contact-details" style="flex: 1; min-width: 280px; max-width: 400px; background: rgba(255,255,255,0.05); border-radius: 1rem; padding: 2rem; margin-bottom: 2rem;">
-          <ul style="list-style: none; padding: 0; color: var(--white-color); font-size: 1.5rem;">
-            <li style="margin-bottom: 1.5rem; display: flex; align-items: center;"><i class='bx bx-map' style="color: var(--main-color); font-size: 2rem; margin-right: 1rem;"></i> Johannesburg, South Africa</li>
-            <li style="margin-bottom: 1.5rem; display: flex; align-items: center;"><i class='bx bx-phone' style="color: var(--main-color); font-size: 2rem; margin-right: 1rem;"></i> +277 286 7492</li>
-            <li style="margin-bottom: 1.5rem; display: flex; align-items: center;"><i class='bx bx-envelope' style="color: var(--main-color); font-size: 2rem; margin-right: 1rem;"></i> calvinkhoza1998@gmail.com</li>
-          </ul>
-          <div class="sci" style="margin-top: 2rem; display: flex; gap: 1.5rem;">
-            <a href="https://github.com/calvinkhoza" aria-label="GitHub" style="color: var(--main-color); font-size: 2.2rem;"><i class="bx bxl-github"></i></a>
-            <a href="https://www.linkedin.com/in/calvin-khoza-csk1998/" aria-label="LinkedIn" style="color: var(--main-color); font-size: 2.2rem;"><i class="bx bxl-linkedin"></i></a>
-            <a href="https://www.facebook.com/in/calvin-khoza-csk1998/" aria-label="Facebook" style="color: var(--main-color); font-size: 2.2rem;"><i class="bx bxl-facebook"></i></a>
+          <div class="info-item" style="display: flex; align-items: flex-start; gap: 1.5rem; margin-bottom: 2.5rem;">
+            <i class='bx bx-map' style="color: var(--main-color); font-size: 2.5rem;"></i>
+            <div>
+              <h3 style="color: var(--main-color); font-size: 1.7rem; margin-bottom: 0.5rem;">Address</h3>
+              <p style="color: var(--white-color); font-size: 1.4rem;">1094, Luvuyo, Roodekop</p>
+            </div>
+          </div>
+          <div class="info-item" style="display: flex; align-items: flex-start; gap: 1.5rem; margin-bottom: 2.5rem;">
+            <i class='bx bx-phone' style="color: var(--main-color); font-size: 2.5rem;"></i>
+            <div>
+              <h3 style="color: var(--main-color); font-size: 1.7rem; margin-bottom: 0.5rem;">Call Me</h3>
+              <p style="color: var(--white-color); font-size: 1.4rem;">+27 74 286 7492</p>
+            </div>
+          </div>
+          <div class="info-item" style="display: flex; align-items: flex-start; gap: 1.5rem; margin-bottom: 2.5rem;">
+            <i class='bx bx-envelope' style="color: var(--main-color); font-size: 2.5rem;"></i>
+            <div>
+              <h3 style="color: var(--main-color); font-size: 1.7rem; margin-bottom: 0.5rem;">Email</h3>
+              <p style="color: var(--white-color); font-size: 1.4rem;">calvinkhoza1998@gmail.com</p>
+            </div>
           </div>
         </div>
         <!-- Contact Form -->
-        <form class="contact-form" style="flex: 2; min-width: 300px; max-width: 600px; background: rgba(255,255,255,0.05); border-radius: 1rem; padding: 2rem;" autocomplete="off">
-          <div style="display: flex; flex-direction: column; gap: 1.5rem;">
-            <input type="text" name="name" placeholder="Your Name" required style="padding: 1rem; border-radius: 0.5rem; border: none; font-size: 1.4rem; background: rgba(255,255,255,0.1); color: var(--white-color);">
-            <input type="email" name="email" placeholder="Your Email" required style="padding: 1rem; border-radius: 0.5rem; border: none; font-size: 1.4rem; background: rgba(255,255,255,0.1); color: var(--white-color);">
-            <textarea name="message" rows="5" placeholder="Your Message" required style="padding: 1rem; border-radius: 0.5rem; border: none; font-size: 1.4rem; background: rgba(255,255,255,0.1); color: var(--white-color);"></textarea>
-            <button type="submit" class="btn btn-primary" style="padding: 1rem 3rem; background: var(--main-color); border: none; border-radius: 4rem; font-size: 1.6rem; color: var(--bg-color); font-weight: 500; transition: 0.5s; cursor: pointer;">Send Message</button>
+        <form id="contactForm" class="contact-form" style="flex: 2; min-width: 300px; max-width: 600px; background: rgba(255,255,255,0.05); border-radius: 1rem; padding: 2rem; display: flex; flex-direction: column; gap: 1.5rem;" autocomplete="off">
+          <input type="hidden" name="access_key" value="3aa0a34d-68e0-4f1e-9ebe-1af8bbd5876b">
+          <div class="form-group" style="display: flex; flex-direction: column; gap: 0.5rem; margin-bottom: 1.2rem;">
+            <label for="name" style="color: var(--main-color); font-size: 1.3rem;">Full Name</label>
+            <input type="text" id="name" name="name" placeholder="Enter your full name" required style="padding: 1rem; border-radius: 0.5rem; border: none; font-size: 1.4rem; background: rgba(255,255,255,0.1); color: var(--white-color);">
+          </div>
+          <div class="form-group" style="display: flex; flex-direction: column; gap: 0.5rem; margin-bottom: 1.2rem;">
+            <label for="email" style="color: var(--main-color); font-size: 1.3rem;">Email Address</label>
+            <input type="email" id="email" name="email" placeholder="Enter your email address" required style="padding: 1rem; border-radius: 0.5rem; border: none; font-size: 1.4rem; background: rgba(255,255,255,0.1); color: var(--white-color);">
+          </div>
+          <div class="form-group" style="display: flex; flex-direction: column; gap: 0.5rem; margin-bottom: 1.2rem;">
+            <label for="message" style="color: var(--main-color); font-size: 1.3rem;">Your Message</label>
+            <textarea id="message" name="message" class="input-message" placeholder="Share your thoughts" required style="padding: 1rem; border-radius: 0.5rem; border: none; font-size: 1.4rem; background: rgba(255,255,255,0.1); color: var(--white-color);"></textarea>
+          </div>
+          <div id="formStatus" style="margin-bottom: 15px; color: var(--main-color); text-align: center; font-size: 1.2rem;"></div>
+          <div style="text-align: center; margin-top: 1rem;">
+            <button type="submit" class="btn btn-primary" style="padding: 1rem 3rem; background: var(--main-color); border: none; border-radius: 4rem; font-size: 1.6rem; color: var(--bg-color); font-weight: 500; transition: 0.5s; cursor: pointer;"><i class='bx bx-send'></i> Send Message</button>
           </div>
         </form>
       </div>
@@ -1059,6 +1079,33 @@
           scrollDownIcon.style.display = 'flex';
         }
       });
+      document.getElementById("contactForm").addEventListener("submit", async function(event) {
+            event.preventDefault(); // Prevent default form submission
+            const form = event.target;
+            const formData = new FormData(form);
+            const statusDiv = document.getElementById("formStatus");
+            try {
+                // Show loading state
+                statusDiv.innerText = "Sending your message...";
+                const response = await fetch("https://api.web3forms.com/submit", {
+                    method: "POST", 
+                    body: formData 
+                });
+                if (response.ok) {
+                    // Display success message and reset the form
+                    statusDiv.innerText = "Your message was sent successfully!";
+                    form.reset(); 
+                    // Clear status message after 3 seconds
+                    setTimeout(() => {
+                        statusDiv.innerText = ""; 
+                    }, 3000);
+                } else {
+                    statusDiv.innerText = "Something went wrong. Please try again.";
+                }
+            } catch (error) {
+                statusDiv.innerText = "Error: " + error.message;
+            }
+        });
     </script>
     
 </body>
