--- a/index.html
+++ b/index.html
@@ -1155,5 +1155,15 @@
         }
     });
   </script>
+  <footer id="footer" class="footer" style="background: var(--second-bg-color); padding: 2rem 0 0 0; margin-top: 0; border-top: none;">
+    <div class="container" style="max-width: 1200px; margin: 0 auto; display: flex; flex-direction: column; align-items: center; gap: 1rem;">
+      <div class="copyright text-center" style="color: var(--white-color); font-size: 1.4rem; letter-spacing: 0.03em;">
+        <p>© <span>Copyright</span> <strong class="px-1 sitename" style="color: var(--main-color); font-weight: 700;">Cavin</strong> <span>All Rights Reserved</span></p>
+      </div>
+      <div class="credits" style="color: var(--main-color); font-size: 1.2rem;">
+        Designed by <a>Cavin</a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
